Refactor commands to use Adventure API for improved message formatting, update version handling in Updater, and add teleport command with permissions.