@@ -10,6 +10,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.concurrent.CompletableFuture;
 import me.crazyg.everything.Everything;
@@ -31,14 +32,14 @@ public class Updater implements Listener {
 
     public Updater(Everything plugin) {
         this.plugin = plugin;
-        this.currentVersion = plugin.getDescription().getVersion();
+        this.currentVersion = plugin.getPluginMeta().getVersion();
         checkForUpdates();
     }
 
     private void checkForUpdates() {
         CompletableFuture.runAsync(() -> {
             try {
-                URL url = new URL(GITHUB_API_URL);
+                URL url = URI.create(GITHUB_API_URL).toURL();
                 HttpURLConnection connection = (HttpURLConnection) url.openConnection();
                 connection.setRequestMethod("GET");
                 connection.setRequestProperty("Accept", "application/vnd.github.v3+json");
@@ -59,54 +60,56 @@ public class Updater implements Listener {
                         JsonObject latestRelease = releases.get(0).getAsJsonObject();
                         latestVersion = latestRelease.get("tag_name").getAsString();
 
-                        // Get download URL from assets
                         JsonArray assets = latestRelease.getAsJsonArray("assets");
                         if (assets != null && assets.size() > 0) {
                             downloadUrl = assets.get(0).getAsJsonObject().get("browser_download_url").getAsString();
                         }
 
-                        // Compare versions
                         if (!currentVersion.equals(latestVersion)) {
                             updateAvailable = true;
-                            plugin.getLogger().info("A new update is available! Current version: " + currentVersion + 
-                                                  ", Latest version: " + latestVersion);
-                            // Auto-download the update
+                            plugin.getLogger().info(Component.text()
+                                .append(Component.text("A new update is available! ").color(NamedTextColor.GREEN))
+                                .append(Component.text("Current version: ").color(NamedTextColor.YELLOW))
+                                .append(Component.text(currentVersion).color(NamedTextColor.WHITE))
+                                .append(Component.text(", Latest version: ").color(NamedTextColor.YELLOW))
+                                .append(Component.text(latestVersion).color(NamedTextColor.WHITE))
+                                .build().toString());
                             downloadUpdate();
                         }
                     }
                 }
             } catch (IOException e) {
-                plugin.getLogger().warning("Failed to check for updates: " + e.getMessage());
+                plugin.getLogger().severe(Component.text("Failed to check for updates: " + e.getMessage())
+                    .color(NamedTextColor.RED)
+                    .toString());
             }
         });
     }
 
     private void downloadUpdate() {
         if (downloadUrl == null || downloadUrl.isEmpty()) {
-            plugin.getLogger().warning("No download URL available for the update!");
+            plugin.getLogger().severe(Component.text("No download URL available for the update!")
+                .color(NamedTextColor.RED)
+                .toString());
             return;
         }
 
         CompletableFuture.runAsync(() -> {
             try {
-                // Create updates directory if it doesn't exist
                 File updateFolder = new File(plugin.getDataFolder().getParentFile(), UPDATE_FOLDER);
                 if (!updateFolder.exists()) {
                     updateFolder.mkdir();
                 }
 
-                // Prepare the file
                 String fileName = "everything-" + latestVersion + ".jar";
                 File outputFile = new File(updateFolder, fileName);
 
-                // Download the file
-                URL url = new URL(downloadUrl);
+                URL url = URI.create(downloadUrl).toURL();
                 HttpURLConnection connection = (HttpURLConnection) url.openConnection();
                 connection.setRequestProperty("Accept", "application/octet-stream");
 
                 try (InputStream in = connection.getInputStream();
                      FileOutputStream out = new FileOutputStream(outputFile)) {
-                    // Download with progress tracking
                     byte[] buffer = new byte[1024];
                     int bytesRead;
                     long totalBytesRead = 0;
@@ -116,21 +119,30 @@ public class Updater implements Listener {
                         out.write(buffer, 0, bytesRead);
                         totalBytesRead += bytesRead;
                         
-                        // Log progress
                         if (fileSize > 0) {
                             int progress = (int) ((totalBytesRead * 100) / fileSize);
-                            if (progress % 5 == 0) { // Log every 5%
-                                plugin.getLogger().info("Download progress: " + progress + "%");
+                            if (progress % 5 == 0) {
+                                plugin.getLogger().info(Component.text("Download progress: " + progress + "%")
+                                    .color(NamedTextColor.YELLOW)
+                                    .toString());
                             }
                         }
                     }
                 }
 
-                plugin.getLogger().info("Update downloaded successfully to: " + outputFile.getAbsolutePath());
-                plugin.getLogger().info("Please restart your server to apply the update.");
+                plugin.getLogger().info(Component.text()
+                    .append(Component.text("Update downloaded successfully to: ").color(NamedTextColor.GREEN))
+                    .append(Component.text(outputFile.getAbsolutePath()).color(NamedTextColor.WHITE))
+                    .build().toString());
+                
+                plugin.getLogger().info(Component.text("Please restart your server to apply the update.")
+                    .color(NamedTextColor.YELLOW)
+                    .toString());
 
             } catch (IOException e) {
-                plugin.getLogger().warning("Failed to download update: " + e.getMessage());
+                plugin.getLogger().severe(Component.text("Failed to download update: " + e.getMessage())
+                    .color(NamedTextColor.RED)
+                    .toString());
             }
         });
     }
@@ -144,7 +156,8 @@ public class Updater implements Listener {
                 .append(Component.text("Current version: ").color(NamedTextColor.YELLOW))
                 .append(Component.text(currentVersion).color(NamedTextColor.WHITE))
                 .append(Component.text(", Latest version: ").color(NamedTextColor.YELLOW))
-                .append(Component.text(latestVersion).color(NamedTextColor.WHITE)));
+                .append(Component.text(latestVersion).color(NamedTextColor.WHITE))
+                .build());
         }
     }
 
